--- a/app/elements/network-add-element.html
+++ b/app/elements/network-add-element.html
@@ -70,7 +70,19 @@
             value: function() {
               return {
                 name: '',
-                cloud: ''
+                cloud: '',
+                adminStateUp: '',
+                createSubnet: '',
+                subnet_name: '',
+                subnet_address: '',
+                subnet_ipv: '',
+                subnet_gatewayIp: '',
+                subnet_disableGateway: '',
+                subnet_enableDHCP: '',
+                subnet_createRouter: '',
+                subnet_routerNname: '',
+                network_routerPublicGateway: '',
+                subnet_allocationPools: ''
               }
             }
           },
@@ -137,11 +149,82 @@
         },
         _submitForm: function() {
           console.log(this.network);
+          var payload = {},
+            network = this.network;
+          payload.network = {};
+          payload.network.cloud = network.cloud;
+          payload.network.name = network.name;
+          payload.network.admin_state_up = network.adminStateUp;
+
+          // Construct subnet params
+          if (network.createSubnet) {
+
+            payload.subnet = {};
+            if (network.subnet_name !== null) {
+              payload.subnet.name = network.subnet_name;
+            }
+
+            if (network.subnet_ipv !== null) {
+              payload.subnet.ip_version = network.subnet_ipv.charAt(3);
+            }
+
+            if (network.subnet_address) {
+              payload.subnet.cidr = network.subnet_address;
+            }
+
+            if (!network.subnet_disableGateway) {
+              payload.subnet.gateway_ip = network.subnet_gatewayIp;
+            }
+
+            payload.subnet.enable_dhcp = network.subnet_enableDHCP;
+
+            if (network.subnet_allocationPools) {
+              payload.subnet.allocation_pools = network.subnet_allocationPools
+                .split('\n')
+                .map(function(pool) {
+                  var tuple = pool.split(',');
+                  if (tuple.length == 2)
+                    return {
+                      start: tuple[0].trim(),
+                      end: tuple[1].trim()
+                    };
+                  return {
+                    start: '',
+                    end: ''
+                  };
+                });
+            }
+
+            // Construct router params
+            if (network.subnet_createRouter) {
+              payload.subnet.router = {};
+
+              if (network.subnet_routerNname) {
+                payload.subnet.router.name = network.subnet_routerNname;
+              }
+
+              payload.subnet.router.publicGateway = network.network_routerPublicGateway;
+            }
+          }
+
+          console.log(payload);
         },
         _resetForm: function(e) {
           // Reset network
           this.set('network.name', '');
           this.set('network.cloud', '');
+          this.set('network.adminStateUp', '');
+          this.set('network.createSubnet', '');
+          this.set('network.subnet_name', '');
+          this.set('network.subnet_address', '');
+          this.set('network.subnet_ipv', '');
+          this.set('network.subnet_gatewayIp', '');
+          this.set('network.subnet_disableGateway', '');
+          this.set('network.subnet_enableDHCP', '');
+          this.set('network.subnet_createRouter', '');
+          this.set('network.subnet_routerNname', '');
+          this.set('network.network_routerPublicGateway', '');
+          this.set('network.subnet_allocationPools', '');
 
           // Reset Form Fields
           this.fields.forEach(function(el, index) {
