dialog head tweak

--- a/app/styles/shared-styles.html
+++ b/app/styles/shared-styles.html
@@ -107,6 +107,7 @@
             padding: 16px 24px;
             margin: 0;
             line-height: 36px;
+            height: 36px;
         }
         paper-dialog ::content paper-dialog-scrollable {
             background-color: #fff;
