disabled btn colors tweak

--- a/app/elements/login-element.html
+++ b/app/elements/login-element.html
@@ -46,8 +46,8 @@
             font-size: 16px;
         }
         :host .bottom-actions paper-button[disabled] {
-            background-color: #ccc;
-            color: #fff; 
+            background-color: #eaeaea;
+            color: #a8a8a8;
             cursor: not-allowed; 
         }
 
