--- a/app/elements/register-element.html
+++ b/app/elements/register-element.html
@@ -48,7 +48,7 @@
         
         :host .bottom-actions paper-button[disabled] {
             background-color: #ccc;
-            color: #fff;
+            color: #a8a8a8;
             cursor: not-allowed;
         }
         
