--- a/app/elements/network-add-element.html
+++ b/app/elements/network-add-element.html
@@ -21,40 +21,48 @@
 
     <paper-card heading="Add Network">
       <div class="card-content">
-        <template is="dom-repeat" items="{{fields}}" as="field">
-          <template is="dom-if" if="[[_computeFieldType(field, 'text', field.show)]]">
-            <paper-input id="[[field.name]]" placeholder="[[field.placeholder]]" label="[[field.label]]" value="{{field.value}}" auto-validate required="[[field.required]]" error-message="[[field.errorMessage]]"></paper-input>
+        <div hidden$=[[!hasClouds]]>
+          <template is="dom-repeat" items="{{fields}}" as="field">
+            <template is="dom-if" if="[[_computeFieldType(field, 'text', field.show)]]">
+              <paper-input id="[[field.name]]" placeholder="[[field.placeholder]]" label="[[field.label]]" value="{{field.value}}" auto-validate required="[[field.required]]" error-message="[[field.errorMessage]]"></paper-input>
+            </template>
+
+            <template is="dom-if" if="[[_computeFieldType(field, 'textarea', field.show)]]">
+              <paper-textarea id="[[field.name]]" label="[[field.label]]" rows="5" max-rows="8" value="{{field.value}}" auto-validate required="[[field.required]]" error-message="[[field.errorMessage]]"></paper-textarea>
+            </template>
+
+            <template is="dom-if" if="[[_computeFieldType(field, 'dropdown', field.show)]]">
+              <paper-dropdown-menu class="dropdown-block" label="[[field.label]]" horizontal-align="left">
+                <paper-menu id="[[field.name]]" attr-for-selected="value" selected="{{field.value}}" class="dropdown-content">
+                  <template is="dom-repeat" items="[[field.options]]" as="option">
+                    <paper-item value="[[option.val]]">[[option.title]]</paper-item>
+                  </template>
+                </paper-menu>
+              </paper-dropdown-menu>
+            </template>
+
+            <template is="dom-if" if="[[_computeFieldType(field, 'switch', field.show)]]">
+              <paper-toggle-button checked="{{field.value}}">[[field.label]]</paper-toggle-button>
+            </template>
+
+            <template is="dom-if" if="[[_computeFieldType(field, 'checkbox', field.show)]]">
+              <paper-checkbox checked="{{field.value}}"> [[field.label]]</paper-checkbox>
+            </template>
           </template>
 
-          <template is="dom-if" if="[[_computeFieldType(field, 'textarea', field.show)]]">
-            <paper-textarea id="[[field.name]]" label="[[field.label]]" rows="5" max-rows="8" value="{{field.value}}" auto-validate required="[[field.required]]" error-message="[[field.errorMessage]]"></paper-textarea>
-          </template>
+          <div class="clearfix">
+            <paper-button class="submit-btn pull-left" disabled$="[[!formReady]]" raised on-tap="_submitForm">Add</paper-button>
+            <paper-button class="submit-btn pull-right" raised on-tap="_resetForm">Reset</paper-button>
+          </div>
+        </div>
 
-          <template is="dom-if" if="[[_computeFieldType(field, 'dropdown', field.show)]]">
-            <paper-dropdown-menu class="dropdown-block" label="[[field.label]]" horizontal-align="left">
-              <paper-menu id="[[field.name]]" attr-for-selected="value" selected="{{field.value}}" class="dropdown-content">
-                <template is="dom-repeat" items="[[field.options]]" as="option">
-                  <paper-item value="[[option.val]]">[[option.title]]</paper-item>
-                </template>
-              </paper-menu>
-            </paper-dropdown-menu>
-          </template>
-
-          <template is="dom-if" if="[[_computeFieldType(field, 'switch', field.show)]]">
-            <paper-toggle-button checked="{{field.value}}">[[field.label]]</paper-toggle-button>
-          </template>
-
-          <template is="dom-if" if="[[_computeFieldType(field, 'checkbox', field.show)]]">
-            <paper-checkbox checked="{{field.value}}"> [[field.label]]</paper-checkbox>
-          </template>
-        </template>
-
-        <div class="clearfix">
-          <paper-button class="submit-btn pull-left" disabled$="[[!formReady]]" raised on-tap="_submitForm">Add</paper-button>
-          <paper-button class="submit-btn pull-right" raised on-tap="_resetForm">Reset</paper-button>
+        <div hidden$=[[hasClouds]]>
+          <p>You cannot add a network since you don's have an enabled Openstack clound in your account!</p>
         </div>
       </div>
     </paper-card>
+
+    <iron-ajax id="addNetworkAjax" url="/scripts" method="POST" on-request="_addNetworkAjaxRequest" on-response="_addNetworkAjaxResponse"></iron-ajax>
   </template>
 
   <script>
@@ -93,6 +101,18 @@
             },
             notify: true
           },
+          clouds: {
+            type: Array,
+            value: function() {
+              return Mist.clouds.filter(function(cloud) {
+                return cloud.enabled && cloud.provider == 'openstack';
+              });
+            }
+          },
+          hasClouds: {
+            type: Boolean,
+            computed: '_computeHasClouds(clouds)'
+          },
           sendingData: {
             type: Boolean,
             value: false
@@ -103,16 +123,21 @@
           }
         },
         observers: [
-          '_fieldsChanged(fields.*, sendingData)'
+          '_fieldsChanged(fields.*, sendingData)',
+          '_cloudsChanged(clouds.*)'
         ],
         _computeFieldType: function(field, value, show) {
           if (!(field.showIf && !field.show)) {
             return field.type == value;
           }
         },
+        _computeHasClouds: function(clouds) {
+          return clouds.length > 0;
+        },
         _fieldsChanged: function(fields, sendingData) {
           var network = this.network,
-            show, dependency;
+            show = true,
+            dependency;
 
           fields.base.forEach(function(el, index) {
             network[el.name] = el.value;
@@ -129,13 +154,8 @@
               }
 
               if (!show) {
-                this.resetField(el, index);
+                this._resetField(el, index);
               }
-            }
-
-            if (el.valueIf) {
-              dependency = network[el.valueIf.fieldName];
-              this.set('fields.' + index + '.value', el.valueIf.fieldOptions[dependency]);
             }
           }, this);
 
@@ -146,6 +166,21 @@
           this.set('network', network);
 
           this.set('formReady', valid && !sendingData);
+        },
+        _cloudsChanged: function(clouds) {
+          var index = this.fields.findIndex(function(field) {
+            return field.name == "cloud";
+          }, this);
+
+          var options = clouds.base.map(function(cloud) {
+              var obj = {};
+              obj['title'] = cloud.title;
+              obj['val'] = cloud;
+              return obj;
+          }, this);
+
+          this.set('fields.' + index + '.options', options);
+          this.set('fields.' + index + '.value', '');
         },
         _submitForm: function() {
           console.log(this.network);
@@ -208,6 +243,18 @@
           }
 
           console.log(payload);
+          //   this.$.addNetworkAjax.body = payload;
+          //   this.$.addNetworkAjax.generateRequest();
+        },
+        _addNetworkAjaxRequest: function() {
+          this.set('sendingData', true);
+        },
+        _addNetworkAjaxResponse: function(e) {
+          this.set('sendingData', false);
+
+          this.fire('addNetwork', {
+            network: {}
+          });
         },
         _resetForm: function(e) {
           // Reset network
@@ -233,10 +280,10 @@
             }
 
             // Reset Form Fields Validation
-            this.resetField(el, index);
+            this._resetField(el, index);
           }, this);
         },
-        resetField: function(el, index) {
+        _resetField: function(el, index) {
           this.set('fields.' + index + '.value', el.defaultValue);
 
           var input = this.querySelector('#' + el.name);
