special style in login and register forms

--- a/app/elements/login-element.html
+++ b/app/elements/login-element.html
@@ -16,6 +16,15 @@
             width: 300px;
         }
         
+        paper-dialog::content h2 {
+            background-color: var(--mist-dark-color);
+            color: #fff;
+        }
+
+        paper-dialog::content iron-icon {
+            color: #fff;
+        }
+
         </style>
         <paper-card heading="Login">
             <div class="card-content">
