--- a/app/elements/register-element.html
+++ b/app/elements/register-element.html
@@ -15,7 +15,16 @@
         paper-dialog {
             width: 300px;
         }
-        
+
+        paper-dialog::content h2 {
+            background-color: var(--mist-dark-color);
+            color: #fff;
+        }
+
+        paper-dialog::content iron-icon {
+            color: #fff;
+        }
+
         </style>
         <paper-card heading="Register">
             <div class="card-content">
