--- a/app/elements/styling-mist.html
+++ b/app/elements/styling-mist.html
@@ -5,6 +5,7 @@
     <template>
         <style is="custom-style" include="shared-styles"></style>
         <style is="custom-style" include="tags-and-labels"></style>
+        <style is="custom-style" include="dialogs"></style>
         <style>
         :host {
             display: block;
