--- a/app/elements/app-forms/app-forms.html
+++ b/app/elements/app-forms/app-forms.html
@@ -85,7 +85,7 @@
         }
 
         ::content paper-item:hover {
-            background-color: var(--mist-very-light-color);
+            background-color: var(--mist-lighter-color);
         }
 
         </style>
