update status in sidebar list

--- a/app/index.html
+++ b/app/index.html
@@ -320,13 +320,13 @@ subject to an additional IP rights grant found at http://polymer.github.io/PATEN
           <a data-route="login" href="/login">
             <iron-icon icon="face"></iron-icon>
             <span>Login Form</span>
-            <iron-icon icon="check" class="done-icon"></iron-icon>
+            <iron-icon icon="done-all" class="done-icon"></iron-icon>
           </a>
 
           <a data-route="register" href="/register">
             <iron-icon icon="face"></iron-icon>
             <span>Register Form</span>
-            <iron-icon icon="check" class="done-icon"></iron-icon>
+            <iron-icon icon="done-all" class="done-icon"></iron-icon>
           </a>
 
           <a data-route="details" href="/details">
